hphp/hack/test/typecheck/sealed/sealed_classes20.php
<?hh
<<__Sealed(static::class)>> class X {}
